Button component - fixing gap issues

--- a/src/Pages/ButtonComponent/styles/index.css
+++ b/src/Pages/ButtonComponent/styles/index.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    color: #171717;
 }
 .buuton-section {
 display: flex;
@@ -20,7 +19,7 @@ display: flex;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    gap: 40px;
+    gap: 30px;
     }
     
     @media screen and (max-width: 768px) {
